--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,17 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Reset all defaults */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-/* Force black background */
-body, html {
-  background-color: black;
+html, body {
+  background: black;
+  min-height: 100vh;
   width: 100%;
-  height: 100%;
+  margin: 0;
+  padding: 0;
   overflow: hidden;
 }
